karnc/tests/fixtures/positive/117_workers_target_simple/src/greet.karn
context greet

capability Clock {
  fn now() -> Effect[Int]
}

provides Clock = FixedClock {
  fn now() -> Effect[Int] {
    42
  }
}

service hello {
  on call(name: String) -> Effect[Result[String, ()]]
      given Clock {
    let n <- Clock.now()
    Ok("hello")
  }
}
