karnc/tests/fixtures/negative/136_integration_mock_in_integration/src/app/a.karn
context app.a
capability C { fn f() -> Effect[Int] }
provides C = Impl { fn f() -> Effect[Int] { 1 } }
service ping {
  on call() -> Effect[Int] given C { let n <- C.f() n }
}
